Astronaut movements (idk how to spell this)

--- a/scenes/Makefile
+++ b/scenes/Makefile
@@ -2,13 +2,9 @@
 
 #n.b. the '-y' sets autoexec scripts to 'on' so that driver expressions will work
 UNAME_S := $(shell uname -s)
-ifeq ($(UNAME_S),Darwin)
-	BLENDER = /Applications/Blender/blender.app/Contents/MacOS/blender -y
-else ifeq ($(UNAME_S),Linux)
-	BLENDER = ../../blender-2.93.4-linux-x64/blender -y
-else
-	BLENDER = blender
-endif
+
+BLENDER = "D:\Blender\blender.exe"
+
 
 EXPORT_MESHES=export-meshes.py
 EXPORT_SCENE=export-scene.py
